# Maxima

./: .gitignore  CMakeLists.txt  README.md  example.cpp  function_maxima.h  main.cpp  maximaTest.cpp  wyjatkowy_int.cpp
toTest/: CursedAllocator.cpp  example.cpp  maximaTest.cpp  skrypt.sh  skryptValgrind.sh  test_damiana.cc  test_damiana_compiled  wyjatkowy_int.cpp
toTest/DamianTests/: skryptValgrind.sh  test_damiana.cc  test_damiana_compiled
